--- a/demo.html
+++ b/demo.html
@@ -1,2 +1,19 @@
-<!-- demo.html -->
-Hello World...!
+<!DOCTYPE html>
+<html>
+  <head>
+    <!-- code to intro our app -->
+    <title>Document</title>
+  </head>
+  <body>
+    <!-- code to create app view -->
+    Hello World...!
+
+    <h1>Hello World...!</h1>
+
+    <!-- 
+
+    <h1> : tag
+
+ -->
+  </body>
+</html>
