--- a/intro.html
+++ b/intro.html
@@ -16,6 +16,9 @@
 
     <!-- Topic Name : Formating tags -->
 
+    <font color="red">
+      <h1>Topic Name : Formating tags</h1>
+    </font>
     <b>Bold</b> <br />
     <strong>strong</strong><br />
     <i>italic</i> <br />
