--- a/html/img.html
+++ b/html/img.html
@@ -6,9 +6,9 @@
     <title>Document</title>
   </head>
   <body>
-    <img src="img/background1.jpg" alt="demo img 1" width="300px" />
-    <img src="img/background2.jpg" alt="demo img 2" width="300px" />
-    <img src="img/background3.jpg" alt="demo img 3" width="300px" />
+    <img src="../img/background1.jpg" alt="demo img 1" width="300px" />
+    <img src="../img/background2.jpg" alt="demo img 2" width="300px" />
+    <img src="../img/background3.jpg" alt="demo img 3" width="300px" />
 
     <!-- src="copy image address" -->
     <img
