--- a/index.html
+++ b/index.html
@@ -7,5 +7,10 @@
   </head>
   <body>
     <h1>Welocme User...!</h1>
+    <ol>
+      <li><a href="html/intro.html"> Formating Tags</a></li>
+      <li><a href="html/img.html"> Img Tag</a></li>
+      <li><a href="html/list-ol.html"> Ol Tags</a></li>
+    </ol>
   </body>
 </html>
