--- a/html/table.html
+++ b/html/table.html
@@ -20,15 +20,13 @@
       <tbody bgcolor="skyblue">
         <tr>
           <td>Alex</td>
-          <td>Mumbai</td>
+          <td rowspan="3">Pune</td>
         </tr>
         <tr>
           <td>Ram</td>
-          <td>Pune</td>
         </tr>
         <tr>
           <td>Ali</td>
-          <td>Hyderabad</td>
         </tr>
       </tbody>
     </table>
