--- a/bootstrap/intro.html
+++ b/bootstrap/intro.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link
+    <!-- <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"
-    />
+    /> -->
+
+    <link rel="stylesheet" href="bootstrap-files/bootstrap.min.css" />
     <style>
       .table-width {
         width: 500px;
